# framework64-audio-container

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  entrypoint.sh  vcpkg.json
fw64/: entrypoint.sh
fw64/n64_gm/sounds/: Accordian_A5.aifc  Bagpipes_F4.17k.aifc  BassLead_C5.aifc  Bassoon_G3.22k.aifc  Bassoon_G3.aifc  BowedGlass_C5.22k.aifc  BrassSect_E4.22k.aifc  Brightness6_C5.22k.aifc  Brightness6_C5.aifc  Calliope_C5.22k.aifc  Calliope_C5.aifc  Cello_A3.22k.aifc  Cello_A3.aifc  ChiffLead_C5.aifc  ChoirAhhs_C5.22k.aifc  ChoirAhhs_F5.22k.aifc  ChoirAhhs_F5.aifc  ChoirOohs_C5.22k.aifc  ChoirOohs_C5.aifc  Clarinet_C5.22k.aifc  GMPiano_Bb2.16k.aifc  GMPiano_Bb2.aifc  GMPiano_G4.aifc  Goblins_C5.aifc  Harmonica_F5.31k.aifc  Harpsichord_Gb5.26k.aifc  IceRain_C5.aifc  JazzGtr_Db6.22k.aifc  JazzGtr_Db6.aifc  MuteTrmpt_C5.22k.aifc  MuteTrmpt_F5.22k.aifc  NewAgePad_C5.22k.aifc  NylonStrGtr_B4.15k.aifc  NylonStrGtr_Db6.19k.aifc  Oboe_C5.17k.aifc  (+26 more)
fw64/sgi2pc/: contents.txt
fw64/src/: audio_util.js  create_sequence_bank.js  create_sound_bank.js  fw64.js  sound_bank_data.js
json2ins/: .gitignore  CMakeLists.txt  ins_writer.cpp
n64_gm/: n64_gm.ins  n64_gm.json
n64_gm/sounds/: Accordian_A5.23k.aifc  Accordian_G4.22k.aifc  Accordian_G4.aifc  AltoSax_Bb4.22k.aifc  AltoSax_Bb4.aifc  Applause.22k.aifc  Atmosphere_C5.22k.aifc  Atmosphere_C5.aifc  Bandoneon_F5.24k.aifc  Bandoneon_F5.aifc  BariSax_C3.22k.aifc  BariSax_C3.aifc  BassLead_C5.22k.aifc  BottleBlow2_C5.17k.aifc  BottleBlow2_C5.aifc  BowedGlass_C5.aifc  BrassSect_C5.22k.aifc  BrassSect_C5.aifc  BrassSect_E4.aifc  Cello_Bb1.22k.aifc  Cello_Bb1.aifc  Cello_C3.22k.aifc  Cello_C3.aifc  Cello_F2.22k.aifc  Cello_F2.aifc  Charang_C5.22k.aifc  Charang_C5.aifc  ChiffLead_C5.22k.aifc  ChoirAhhs_C4.22k.aifc  ChoirAhhs_C4.aifc  ChoirAhhs_C5.aifc  ChoirAhhs_F3.22k.aifc  ChoirAhhs_F3.aifc  ChoirAhhs_G4.22k.aifc  ChoirAhhs_G4.aifc  ChoirOohs_C4.22k.aifc  ChoirOohs_C4.aifc  ChoirOohs_G3.22k.aifc  ChoirOohs_G3.aifc  ChoirOohs_G4.22k.aifc  (+187 more)
scripts/: compress_directory.js  create_sound_bank.js  sgi_tools.js
sgi2pc/: SGI2PCManual.txt
snd2aiff/: main.cpp
src/: CMakeLists.txt  compress_directory.js  create_sequence_bank.js  sgi_tools.js
src/json2ins/: CMakeLists.txt  bank.cpp  ins_writer.h
src/snd2aiff/: CMakeLists.txt  main.cpp
tools/: .gitignore  CMakeLists.txt
tools/json2ins/: CMakeLists.txt  bank.h  main.cpp
tools/snd2aiff/: CMakeLists.txt
